--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<!doctype html><html><body>エセプログラマです / <a href="twitter.com/shibafu528">Twitter
+<!doctype html><html><body>エセプログラマです
+<ul>
+<li>Like: Android, Java, PHP, Ruby
+<li><a href="twitter.com/shibafu528">Twitter
