--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!doctype html><html><body>エセプログラマです
 <ul>
+<li>HN: 芝生 (Shibafu, shibafu528)
 <li>Like: Android, Java, PHP, Ruby
-<li><a href="twitter.com/shibafu528">Twitter
+<li><a href="https://twitter.com/shibafu528">Twitter</a>
+<li><a href="https://github.com/shibafu528">GitHub</a>
