Add mastodon accounts

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!doctype html><html><body>エセプログラマです
+<!doctype html><html><head><meta charset="utf-8"></head><body>エセプログラマです
 <ul>
 <li>HN: 芝生 (Shibafu, shibafu528)
 <li>Like: Android, Java, PHP, Ruby
+<li>Mastodon: <a href="https://social.mikutter.hachune.net/@shibafu528">mikutter</a> <a href="https://ertona.net/@shibafu528">ertona.net</a>
 <li><a href="https://twitter.com/shibafu528">Twitter</a>
 <li><a href="https://github.com/shibafu528">GitHub</a>
